--- a/css/site.css
+++ b/css/site.css
@@ -15,7 +15,7 @@
 
 .capcontent {
     background: none repeat scroll 0 0 #FFFFFF;
-    opacity: 0.9;
+    opacity: 0.7;
     top: 0;
     left: 0;
     position: absolute;
@@ -36,7 +36,7 @@
     }
 
 .glyphicon.spinning {
-    animation: spin 1s infinite linear
+    animation: spin 1s infinite linear;
     -webkit-animation: spin2 1s infinite linear;
 }
 
