--- a/css/site.css
+++ b/css/site.css
@@ -21,6 +21,7 @@
     position: absolute;
     width: 100%;
 }
+
     .capcontent .label {
         opacity: 1;
     }
@@ -30,6 +31,7 @@
     overflow: auto;
     min-height: 250px;
 }
+
     .thumbnail img {
         width: 100%;
         min-height: 250px;
@@ -60,11 +62,38 @@
 }
 
 @keyframes spin {
-    from { transform: scale(1) rotate(0deg);}
-    to { transform: scale(1) rotate(360deg);}
+    from {
+        transform: scale(1) rotate(0deg);
+    }
+
+    to {
+        transform: scale(1) rotate(360deg);
+    }
 }
- 
+
 @-webkit-keyframes spin2 {
-    from { -webkit-transform: rotate(0deg);}
-    to { -webkit-transform: rotate(360deg);}
+    from {
+        -webkit-transform: rotate(0deg);
+    }
+
+    to {
+        -webkit-transform: rotate(360deg);
+    }
+}
+
+.custom-popup .leaflet-popup-content-wrapper {
+
+    border-radius: 0;
+}
+
+    .custom-popup .leaflet-popup-content-wrapper a {
+        border-radius: 0;
+    }
+
+.custom-popup .leaflet-popup-tip-container {
+    border-radius: 0;
+}
+
+.custom-popup .leaflet-popup-tip {
+
 }
